# tauri-plugin-ios-glass-tabbar

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  package.json  rollup.config.js
.github/workflows/: audit.yml
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: GlassTabBarPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: set_active_tab.toml  set_badge.toml  set_hidden.toml  set_items.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
