[package]
name = "tauri-plugin-ios-glass-tabbar"
version = "0.1.0"
authors = ["Lê Anh Tuấn <tuanle.works@gmail.com>"]
description = "A native iOS 26 Liquid Glass UITabBar for Tauri apps, bridged to your web navigation."
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
repository = "https://github.com/tuanle96/tauri-plugin-ios-glass-tabbar"
keywords = ["tauri", "plugin", "ios", "liquid-glass", "tabbar"]
categories = ["gui", "os::macos-apis"]
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-ios-glass-tabbar"

[dependencies]
tauri = { version = "2.11.2" }
serde = "1.0"
serde_json = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.6.2", features = ["build"] }
